--- a/COBA/Views/Main/ShowApplicationDetails.cshtml
+++ b/COBA/Views/Main/ShowApplicationDetails.cshtml
@@ -14,7 +14,7 @@
             <label>Application</label>
             @*{{ApplicationMasterList}}*@
             <select class="form-control" name="ddlSBU" ng-model="selectModel.Application" ng-options="item.ApplicationName for item in ApplicationMasterList" title="Select Region" style="width:100%;font-size: 0.8em" required>
-                <option value="">- Select User Application -</option>
+                <option value="">- Select Application -</option>
             </select>
             @*<input data-ng-show="editMode" class="form-control" numberdotonly type="text" maxlength="50" ng-model="ecurrency.ApplicationId" />
                 <input data-ng-hide="editMode" class="form-control" type="text" numberdotonly maxlength="50" ng-model="currency.ApplicationId" required />*@
@@ -22,8 +22,8 @@
         <div class="form-group">
             <label>Country</label>
             @*{{CountryMasterList}}*@
-            <select class="form-control" name="ddlSBU" ng-model="selectModel.Country" ng-options="item.CountryName for item in CountryMasterList" title="Select Region" style="width:100%;font-size: 0.8em" required>
-                <option value="">- Select User Country -</option>
+            <select class="form-control" name="ddlSBU" ng-model="selectModel.Country" ng-change="userfilter()" ng-options="item.CountryName for item in CountryMasterList" title="Select Region" style="width:100%;font-size: 0.8em" required>
+                <option value="">- Select Country -</option>
             </select>
             @*<input data-ng-show="editMode" class="form-control" numberdotonly type="text" maxlength="50" ng-model="ecurrency.Country" />
                 <input data-ng-hide="editMode" class="form-control" type="text" numberdotonly maxlength="50" ng-model="currency.Country" required />*@
@@ -32,7 +32,7 @@
             <label>Product Type</label>
             @*{{ProductMasterList}}*@
             <select class="form-control" name="ddlSBU" ng-model="selectModel.ProductType" ng-options="item.ProductName for item in ProductMasterList" title="Select Region" style="width:100%;font-size: 0.8em" required>
-                <option value="">- Select User Product -</option>
+                <option value="">- Select Product -</option>
             </select>
             @*<input data-ng-show="editMode" class="form-control" numberdotonly type="text" maxlength="50" ng-model="ecurrency.ProductType" />
                 <input data-ng-hide="editMode" class="form-control" type="text" numberdotonly maxlength="50" ng-model="currency.ProductType" required />*@
@@ -56,8 +56,8 @@
             @*{{BusinessSectorMasterList}}*@
             @*<input data-ng-show="editMode" class="form-control" numberdotonly type="text" maxlength="50" ng-model="ecurrency.BusinessSector" />
                 <input data-ng-hide="editMode" class="form-control" type="text" numberdotonly maxlength="50" ng-model="currency.BusinessSector" required />*@
-            <select class="form-control" name="ddlSBU" ng-model="selectModel.BusinessSector" ng-options="item.BusinessSectorName for item in BusinessSectorMasterList" title="Select Region" style="width:100%;font-size: 0.8em" required>
-                <option value="">- Select User Business Master -</option>
+            <select class="form-control" name="ddlSBU" ng-model="selectModel.BusinessSector" ng-change="userfilter()" ng-options="item.BusinessSectorName for item in BusinessSectorMasterList" title="Select Region" style="width:100%;font-size: 0.8em" required>
+                <option value="">- Select Business Master -</option>
             </select>
         </div>
 
@@ -66,8 +66,8 @@
             @*<input data-ng-show="editMode" class="form-control" numberdotonly type="text" maxlength="50" ng-model="ecurrency.Region" />
                 <input data-ng-hide="editMode" class="form-control" type="text" numberdotonly maxlength="50" ng-model="currency.Region" required />*@
 
-            <select class="form-control" name="ddlSBU" ng-model="selectModel.Region" ng-options="item.RegionName for item in RegionMasterList" title="Select Region" style="width:100%;font-size: 0.8em" required>
-                <option value="">- Select User Region -</option>
+            <select class="form-control" name="ddlSBU" ng-model="selectModel.Region" ng-change="userfilter()" ng-options="item.RegionName for item in RegionMasterList" title="Select Region" style="width:100%;font-size: 0.8em" required>
+                <option value="">- Select Region -</option>
             </select>
         </div>
         <div class="form-group">
@@ -136,95 +136,7 @@
             <input data-ng-hide="editMode" class="form-control" type="text" numberdotonly maxlength="50" ng-model="currency.AdditionalParam12" required />
         </div>
 
-        @*<div class="form-group">
-                <label>Region</label>
-                <select>
-                    <option value="volvo">Asia Pacific</option>
-                    <option value="audi">North America</option>
-                    <option value="audi">South America</option>
-                    <option value="audi">Middle East and Africa</option>
-                    <option value="audi">Western Europe</option>
-                </select>
-                <select>
-                    <option value="volvo">
-                        Afghanistan
-                    </option>
-                    <option value="audi">
-                        Albania
-                    </option>
-                    <option value="audi">
-                        Algeria
-                    </option>
-                    <option value="audi">
-                        Andorra
-                    </option>
-                    <option value="audi">
-                        Angola
-                    </option>
-                    <option value="audi">
-                        Antigua and Barbuda
-                    </option>
-                    <option value="audi">
-                        Argentina
-                    </option>
-                    <option value="audi">
-                        Armenia
-                    </option>
-                    <option value="audi">
-                        Australia
-                    </option>
-                    <option value="audi">
-                        Austria
-                    </option>
-                    <option value="audi">
-                        Azerbaijan
-                    </option>
-                    <option value="audi">
-                        Bahamas
-                    </option>
-                    <option value="audi">
-                        Bahrain
-                    </option>
-                    <option value="audi">
-                        Bangladesh
-                    </option>
-                    <option value="audi">
-                        Barbados
-                    </option>
-                    <option value="audi">
-                        Belarus
-                    </option>
-                </select>
-
-                <select>
-                    <option value="volvo">
-                        Futures
-                    </option>
-                    <option value="audi">
-                        Equities
-                    </option>
-                    <option value="audi">
-                        Indices
-                    </option>
-                    <option value="audi">
-                        Warrants
-                    </option>
-                    <option value="audi">
-                        Bonds
-                    </option>
-                    <option value="audi">
-                        Rates
-                    </option>
-                </select>
-            </div>
-
-            <div class="form-group">
-                <label>Division</label>
-                <select>
-                    <option value="volvo">Division 1</option>
-                    <option value="audi">Division 2</option>
-                </select>
-            </div>*@
+     
     </div>
 </div>
 <div class="col-md-6">
@@ -271,13 +183,7 @@
             <input data-ng-hide="editMode" class="form-control" type="text" numberdotonly maxlength="50" ng-model="currency.AdditionalParam13" required />
         </div>
 
-        @*<div class="form-group">
-                <label>Country</label>
-            </div>
-
-            <div class="form-group">
-                <label>Business sector</label>
-            </div>*@
+      
 
     </div>
 </div>
