--- a/COBA/Views/Shared/_Layout.cshtml
+++ b/COBA/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿@using System.Web.Optimization;
 @RenderSection("scripts", required: false)
+<!doctype html> 
 <html style="height: auto; min-height: 100%;">
 <head>
     <base href="#">
@@ -17,63 +18,66 @@
     <link rel="stylesheet" href="~/dist/css/skins/_all-skins.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
+
+<toaster-container toaster-options="{'time-out': 3000, 'close-button':true, 'animation-class': 'toast-top-right'}"></toaster-container>
+
 <body ng-app="reportApp" ng-controller="MainController" class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper" style="height: auto; min-height: 100%;">
         <header class="main-header">
-            <a href="index2.html" class="logo">
+            <a class="logo">
                 <span class="logo-mini"><b>ACHI</b></span>
                 <span class="logo-lg"><b>ACHI</b></span>
             </a>
-            <nav class="navbar navbar-static-top">
-                <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
-                    <span class="sr-only">Toggle navigation</span>
-                </a>
-                <div class="navbar-custom-menu">
-                    <ul class="nav navbar-nav">
-                        <li class="dropdown notifications-menu">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-bell-o"></i>
-                                <span class="label label-warning">{{notificationdata.length}}</span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li class="header">You have {{notificationdata.length}} notifications</li>
-                                <li>
-                                    <ul class="menu">
-                                        <li ng-repeat="n in notificationdata">
-                                            <a ng-click="GetCurrencyConversionForId(n.RefNumber,N.Version,N.Comments,N.ApprovedDate,N.Status)" href="#">
-                                                <i class="fa fa-users text-aqua"></i> RefNumber {{n.RefNumber}} Version {{n.Version}}
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="footer"><a href="Approvals">View all</a></li>
-                            </ul>
-                        </li>
-                        <li class="dropdown user user-menu">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <img src="~/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
-                                <span class="hidden-xs">@Convert.ToString(Session["UserName"])</span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li class="user-header">
-                                    <img src="~/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
-                                    <p>
-                                        @Convert.ToString(Session["UserName"]) - Web Developer
-                                    </p>
-                                </li>
-                                <li class="user-footer">
-                                    <div class="pull-left">
-                                        <a href="#" class="btn btn-default btn-flat">Profile</a>
-                                    </div>
-                                    <div class="pull-right">
-                                        <a href="@Url.Action("Logout", "Home")" class="btn btn-default btn-flat">Sign out</a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
+            @*<nav class="navbar navbar-static-top">
+                    <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
+                        <span class="sr-only">Toggle navigation</span>
+                    </a>
+                    <div class="navbar-custom-menu">
+                        <ul class="nav navbar-nav">
+                            <li class="dropdown notifications-menu">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                    <i class="fa fa-bell-o"></i>
+                                    <span class="label label-warning">{{notificationdata.length}}</span>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li class="header">You have {{notificationdata.length}} notifications</li>
+                                    <li>
+                                        <ul class="menu">
+                                            <li ng-repeat="n in notificationdata">
+                                                <a ng-click="GetCurrencyConversionForId(n.RefNumber,N.Version,N.Comments,N.ApprovedDate,N.Status)" href="#">
+                                                    <i class="fa fa-users text-aqua"></i> RefNumber {{n.RefNumber}} Version {{n.Version}}
+                                                </a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="footer"><a href="Approvals">View all</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown user user-menu">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                    <img src="~/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+                                    <span class="hidden-xs">@Convert.ToString(Session["UserName"])</span>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li class="user-header">
+                                        <img src="~/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                                        <p>
+                                            @Convert.ToString(Session["UserName"]) - Web Developer
+                                        </p>
+                                    </li>
+                                    <li class="user-footer">
+                                        <div class="pull-left">
+                                            <a href="#" class="btn btn-default btn-flat">Profile</a>
+                                        </div>
+                                        <div class="pull-right">
+                                            <a href="@Url.Action("Logout", "Home")" class="btn btn-default btn-flat">Sign out</a>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>*@
         </header>
         <aside class="main-sidebar">
             <!-- sidebar: style can be found in sidebar.less -->
@@ -159,6 +163,8 @@
     <script src="~/dist/js/demo.js"></script>
     <script src="~/plugins/bootstrap-datetimepicker.js"></script>
     <script src="~/Assert/angular.js"></script>
+    <script src="~/Assert/angular-animate.min.js"></script>
+    <script src="~/Assert/toaster.js"></script>
     @*<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>*@
     @*<script data-require="ui-bootstrap@0.12.1" data-semver="0.12.1" src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.1.min.js"></script>*@
     <script src="~/Assert/ui-bootstrap-tpls-0.12.1.min.js"></script>
@@ -173,7 +179,7 @@
     <script src="../js/HomeApp.js"></script>
     <script src="~/js/controllers/ApprovalsController.js"></script>
     <script src="~/js/controllers/StrategyController.js"></script>
-    <script src="../js/controllers/TaskController.js"></script>
+    <script src="../js/controllers/ChangeManagementController.js"></script>
     <script src="~/js/controllers/OnboardingTaskController.js"></script>
     <script src="~/js/controllers/MapTaskController.js"></script>
     <script src="~/js/controllers/EmailsController.js"></script>
@@ -255,6 +261,14 @@
         .main-header .navbar {
             min-height: 55px;
         }*/
+        .modal-content {
+            background-color: #f7f7f7 !important;
+             padding: 10px 15px 10px 15px;
+        }
+        .margintop10{
+            margin-top:10px;
+            margin-left:10px;
+        }
     </style>
 </body>
 </html>
