--- a/COBA/Views/Main/TransferSettings.cshtml
+++ b/COBA/Views/Main/TransferSettings.cshtml
@@ -48,7 +48,7 @@
                     <span>
                         <input type="button" value="Save" data-ng-click="update()" class="btn btn-circle btn-default btn-outline-info" />
                     </span>
-                    <input type="button" value="Cancel" data-ng-click="cancel()" class="btn btn-circle btn-default btn-outline-info" />
+                    @*<input type="button" value="Cancel" data-ng-click="cancel()" class="btn btn-circle btn-default btn-outline-info" />*@
                 </div>
             </div>
         </form>
