--- a/COBA/Views/Main/ShowApplicationDetails.cshtml
+++ b/COBA/Views/Main/ShowApplicationDetails.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="col-md-6">
     <div class="box-body">
         <div class="form-group">
-            <label>Strategy Referrence Number</label>
+            <label>Strategy Reference Number</label>
             <input data-ng-show="editMode" class="form-control" numberdotonly type="text" maxlength="50" ng-model="ecurrency.RefNumber" />
             <input data-ng-hide="editMode" class="form-control" type="text" numberdotonly maxlength="50" ng-model="currency.RefNumber" required />
         </div>
