--- a/COBA/Views/Main/Strategy.cshtml
+++ b/COBA/Views/Main/Strategy.cshtml
@@ -1,11 +1,11 @@
 ﻿<!-- BEGIN PAGE BREADCRUMBS -->
 <div ng-controller="StrategyController" class="whitebg">
     <div class="box-header with-border">
-        <h3 class="box-title">     Model/Algorithm Management   </h3>
+        <h3 class="box-title">    Model/Algo Management   </h3>
     </div>
 
     <div class="row margintop10">
-        <button data-ng-click="showadd()" ng-show="!IsReadOnly" class="btn btn-outline-info">Add Model/Algorithm Management<i class="fa fa-plus"></i></button>
+        <button data-ng-click="showadd()" ng-show="!IsReadOnly" class="btn btn-outline-info">Add Model/Algorithm Management     <i class="fa fa-plus"></i></button>
     </div>
     <section class="content">
 
@@ -21,7 +21,8 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">×</span>
                     </button>
-                    <h4 class="modal-title" id="myModalLabel" style="margin-left:40%;">Model/Algorithm Approval Status</h4>
+                    <h4 class="modal-title text-center" id="myModalLabel" ng-hide="editMode" >Add Model/Algo Management </h4>
+                    <h4 class="modal-title text-center" id="myModalLabel" ng-show="editMode">Edit Model/Algo Management </h4>
                 </div>
                 <div class="modal-body">
                     <div>
@@ -35,7 +36,7 @@
                                         <div class="col-sm-offset-4 col-sm-10">
 
                                             <span data-ng-hide="editMode">
-                                                <input type="button" value="Add" ng-click="InsertStrategy(currency)" class="btn  btn-circle btn-default btn-outline-info" />
+                                                <input type="button" value="Save" ng-click="InsertStrategy(currency)" class="btn  btn-circle btn-default btn-outline-info" />
                                             </span>&nbsp;
                                             <span data-ng-show="editMode">
                                                 <input type="button" value="Update" ng-click="UpdateStrategy(ecurrency)" class="btn  btn-circle btn-default btn-outline-info" />
