--- a/COBA/Views/Main/Tasks.cshtml
+++ b/COBA/Views/Main/Tasks.cshtml
@@ -29,7 +29,7 @@
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">×</span>
                     </button>
-                    <h4 class="modal-title" id="myModalLabel" style="margin-left:40%;">Model/Algorithm Approval Status</h4>
+                    <h4 class="modal-title text-center" id="myModalLabel">Edit Model/Algo Details</h4>
                 </div>
                 <div class="modal-body">
                     <div class="">
