--- a/COBA/Views/Main/ViewApprovals.cshtml
+++ b/COBA/Views/Main/ViewApprovals.cshtml
@@ -5,7 +5,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
-                <h4 class="modal-title" id="myModalLabel" style="margin-left:40%;">Application Approval Status</h4>
+                <h4 class="modal-title text-center" id="myModalLabel">Approval Status</h4>
             </div>
             <div class="modal-body">
                 <div class="">
