--- a/COBA/Views/Main/Tasks.cshtml
+++ b/COBA/Views/Main/Tasks.cshtml
@@ -1,6 +1,5 @@
 ﻿<!-- BEGIN PAGE BREADCRUMBS -->
-<div ng-controller="TaskController" class="whitebg">
-
+<div ng-controller="ChangeManagementController" class="whitebg">
     <div class="box-header with-border">
         <h3 class="box-title">     Change  Management</h3>
     </div>
@@ -82,7 +81,7 @@
                                     <div class="col-md-12">
                                         <div class="form-group">
                                             <label>Supporting documents</label>
-                                            <input data-ng-hide="editMode" class="form-control" type="text" numberdotonly maxlength="50" ng-model="currency.Ranking" required />
+                                            <input type="file" />
                                         </div>
                                     </div>
                                 </div>
