--- a/COBA/Views/Main/UserManagement.cshtml
+++ b/COBA/Views/Main/UserManagement.cshtml
@@ -41,8 +41,8 @@
                                     </div>
 
                                     <div class="col-xs-4">
-                                        <select class="form-control" name="ddlLocation" ng-model="user.selectedBusinessSector" ng-options="item.BusinessSectorName for item in BusinessSectorMasterList" title="Select Country" style="width:100%;font-size: 0.8em">
-                                            <option value="">- Select BusinessSector -</option>
+                                        <select class="form-control" name="ddlLocation" ng-model="user.selectedBusinessSector" ng-options="item.BusinessSectorName for item in BusinessSectorMasterList" title="Select Country" style="width:100%;font-size: 0.8em" required>
+                                            <option value="">- Select Business Sector -</option>
                                         </select>
                                     </div>
 
@@ -239,7 +239,7 @@
                                 <div class="form-group">
                                     <label for="Name" class="col-sm-4 control-label">User Name</label>
                                     <div class="col-sm-6" style="margin-top:6px">
-                                        <input ng-model="user.UserName" class="form-control" maxlength="25" placeholder="Enter user name" required /><label style="color:red">{{InvalidMessage}}</label>
+                                        <input ng-model="user.UserName" class="form-control" maxlength="25" placeholder="Enter user name" required />
                                     </div>
                                 </div>
                                 <div class="form-group">
