--- a/COBA/Views/Main/ViewApprovals.cshtml
+++ b/COBA/Views/Main/ViewApprovals.cshtml
@@ -27,7 +27,12 @@
                                         <tr ng-repeat="right in ViewData">
                                             <td><a href="pages/examples/invoice.html">{{right.RefNumber }}</a></td>
                                             <td>{{right.Approver}}</td>
-                                            <td><span class="label label-success">{{right.Status}}</span></td>
+                                            <td>
+                                                <span class="label ">
+                                                    <input type="button" class="btn btn-success" ng-show={{right.Status=="Y"}} value="Approved" /><input type="button" class="btn btn-danger" ng-show={{right.Status=="N"}} value="Rejected" />
+                                                    <input type="button" class="btn btn-info" ng-show={{right.Status==""}} value="Pending" />
+                                                </span>
+                                            </td>
                                             <td>
                                                 {{right.Comments}}
                                             </td>
