--- a/COBA/Views/Home/LoginDisplay.cshtml
+++ b/COBA/Views/Home/LoginDisplay.cshtml
@@ -10,49 +10,59 @@
 <!-- END LOGO -->
 <!-- BEGIN LOGIN -->
 @Html.Hidden("RedirectToHome", Url.Action("Index", "Home", new { Page = @Request.QueryString["Page"] }))
-<div class="login-box">
+<div class="container">
     <div class="login-logo">
-        <a href="../../index2.html"><b>COBA</b></a>
+        <h1>COBA</h1>
+        <!--<a href="../../index2.html"><b>COBA</b></a>-->
     </div>
     <!-- /.login-logo -->
-    <div class="login-box-body">
-        <p class="login-box-msg">Sign in to start your session</p>
+    <div id="signin-form" @*class="login-box-body"*@>
+        @*<p class="login-box-msg">Sign in to start your session</p>*@
+        <h3>SIGN-IN</h3>
         @using (Html.BeginForm("Login", "Home", FormMethod.Post, new { @class = "login-form", data_async = "", data_target = "#rating-modal" }))
         {
-            <div class="form-group has-feedback">
+            <div class="input-group"> <!--form-group has-feedback-->
                 @*<input type="email" class="form-control" placeholder="Email">*@
+                <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
                 <input class="form-control" type="text" autocomplete="off" placeholder="Username" name="username" />
-                <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+                @*<span class="glyphicon glyphicon-envelope form-control-feedback"></span>*@
             </div>
-            <div class="form-group has-feedback">
+            <div class="input-group"><!--form-group has-feedback-->
+                <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
                 <input class="form-control" type="password" autocomplete="off" placeholder="Password" name="password" />
                 @*<input type="password" class="form-control" placeholder="Password">*@
-                <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                @*<span class="glyphicon glyphicon-lock form-control-feedback"></span>*@
             </div>
             <div class="row">
+                <div class="col-lg-6"></div>
+                <div class="col-lg-6">
+                    <button type="button" class="btn btn-link" data-toggle="modal" data-target="#myModal">Forgot Password?</button>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
+            <!--<div class="row">
                 <div class="col-xs-8">
                     @*<div class="checkbox icheck">
                             <label>
                                 <div class="icheckbox_square-blue" aria-checked="false" aria-disabled="false" style="position: relative;"><input type="checkbox" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"><ins class="iCheck-helper" style="position: absolute; top: -20%; left: -20%; display: block; width: 140%; height: 140%; margin: 0px; padding: 0px; background: rgb(255, 255, 255); border: 0px; opacity: 0;"></ins></div> Remember Me
                             </label>
                         </div>*@
+                </div>-->
+                <!-- /.col -->
+                <!--<div class="col-xs-4">
+                    
                 </div>
                 <!-- /.col -->
-                <div class="col-xs-4">
-                    <button type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
-                </div>
-                <!-- /.col -->
-            </div>
+                <!-- </div>-->
         }
-
-
-        <a href="#">I forgot my password</a><br>
+        <!--<a href="#">I forgot my password</a><br>-->
     </div>
 </div>
 <script src="~/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="~/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="~/plugins/iCheck/icheck.min.js"></script>
 <script src="~/js/custom.js"></script>
+<script src="~/js/animate.js"></script>
 @*<script>
     $(function () {
         $('input').iCheck({
@@ -62,15 +72,63 @@
         });
     });
 </script>*@
-
-
 <style>
-    .login-box, .register-box {
+    .login-logo h1{
+        font-size: 36px;
+        font-weight: bold;
+        color: #d2d6de;
+        text-align: center;
+        margin: 40px 0 60px 0;
+    }
+    #signin-form{
+        max-width: 350px;
+        margin: 0 auto 0;
+        padding: 10px 0;
+        background: #ffffff;
+    }
+    #signin-form h3{
+        font-size: 20px;
+        font-weight: bold;
+        color: #212121;
+        text-align: center;
+    }
+    /*.login-box, .register-box {
         margin-top: 3% !important;
         margin-bottom: 1% !important;
+    }*/
+    .login-page, .register-page{
+        background: url('../img/coba-bg.png') no-repeat -440px -360px;;
     }
-
-    html, body {
+    /*body {
         height: 95%;
+    }*/
+    .login-form{
+        padding-bottom: 12px; 
+    }
+    .input-group-addon{
+        border-radius: 0;
+        background-color: #fff;
+    }   
+    .input-group{
+        padding: 12px 20px;
+    }
+    .form-control{
+        border-radius: 0;
+    }
+    .row{
+        padding: 6px 0 12px 0;
+    }
+    .col-lg-6{
+        padding-left: 45px;
+    }
+    .btn{
+        border-radius: 0;
+    }
+    .btn-block{
+        width: 30%;
+        margin: 6px 0 0 35%;
+    }
+    .btn-link{
+        padding: 5px;
     }
 </style>
