--- a/COBA/Views/Main/ModelAlgoManagement.cshtml
+++ b/COBA/Views/Main/ModelAlgoManagement.cshtml
@@ -23,17 +23,15 @@
             </div>
         </div>
         <div class="col-lg-2 col-md-3 right-sidebar sidebar">
-
             <ol>
-                <li class="active-ol  done-act">
+                <li ng-class="{'active-ol':pageList[0].IsValid,'done-act':pageList[1].IsValid}">
                     <a ng-click="activateTab(0)">Basic Details</a>
                 </li>
 
-                <li class="active-ol">
-
+                <li ng-class="{'active-ol':pageList[1].IsValid,'done-act':pageList[2].IsValid}">
                     <a ng-click="activateTab(1)">Additional DETAILS</a>
                 </li>
-                <li>
+                <li ng-class="{'active-ol':pageList[2].IsValid}">
                     <a ng-click="activateTab(2)">Approver List</a>
                 </li>
             </ol>
@@ -41,6 +39,12 @@
     </div>
 
     <div ng-include="'ViewApprovals'"></div>
-    
+
     <div ng-include="'ConfirmModal'"></div>
 </div>
+
+<style>
+    .disabled {
+        cursor: not-allowed;
+    }
+</style>
